--- a/cube_shuffle-cli/Cargo.toml
+++ b/cube_shuffle-cli/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 parse-display = "0.5.3"
 rand = "0.8.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_yaml = "0.8"
 clap = { version = "3.0.13", features = ["derive", "color", "suggestions"] }
 cube_shuffle-core = { path = "../cube_shuffle-core"}
