--- a/cube_shuffle-wasm/Cargo.toml
+++ b/cube_shuffle-wasm/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2021"
 [dependencies]
 getrandom = { version = "0.2", features = ["js"] }
 yew = { git = "https://github.com/yewstack/yew/" }
+web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent"] }
+wasm-bindgen = "0.2"
 cube_shuffle-core = { path = "../cube_shuffle-core" }
