--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         platform: [macos-latest, ubuntu-latest, windows-latest]
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -27,6 +27,19 @@ jobs:
           target: wasm32-unknown-unknown
           components: clippy
           override: true
+      - name: Install webkit/GTK dependencies (Linux)
+        if: matrix.platform == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get -y install libwebkit2gtk-4.0-dev \
+            build-essential \
+            curl \
+            wget \
+            libssl-dev \
+            libgtk-3-dev \
+            libappindicator3-dev \
+            patchelf \
+            librsvg2-dev
       - name: Install Trunk
         run: cargo install --locked trunk
       - name: Build
