--- a/cube_shuffle-wasm/Cargo.toml
+++ b/cube_shuffle-wasm/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+itertools = "0.10.2"
 rand = "0.8.4"
 getrandom = { version = "0.2", features = ["js"] }
 yew = { git = "https://github.com/yewstack/yew/" }
