--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,6 +127,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [rust-build]
     steps:
+      - name: Install Git
+        run: apt-get -y update && apt-get -y install git
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
