Update Cordova package.json with initial relevant information.

--- a/cube_shuffle-cordova/package.json
+++ b/cube_shuffle-cordova/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "io.cordova.hellocordova",
-  "displayName": "HelloCordova",
-  "version": "1.0.0",
-  "description": "A sample Apache Cordova application that responds to the deviceready event.",
-  "main": "index.js",
+  "name": "com.philipborg.cubeshuffle",
+  "displayName": "CubeShuffle",
+  "version": "0.1.0",
+  "description": "MTG Cube shuffling utility.",
+  "main": "AGPL-3.0-or-later",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "ecosystem:cordova"
   ],
-  "author": "Apache Cordova Team",
-  "license": "Apache-2.0",
+  "author": "Philip Borgström",
+  "license": "GNU Affero General Public License v3.0 or later",
   "devDependencies": {
     "cordova-android": "^10.1.1"
   },
