--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -3,13 +3,11 @@ name = "cube_shuffle-tauri"
 version = "0.1.0"
 description = "MTG Cube shuffling utility"
 authors = ["Philip Borgström"]
-license = "GNU Affero General Public License v3.0"
+license = "GNU Affero General Public License v3.0 or later"
 repository = "https://github.com/philipborg/CubeShuffle"
 default-run = "cube_shuffle-tauri"
 edition = "2021"
 build = "src/build.rs"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
 tauri-build = { version = "1.0.0-beta.4" }
