--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ env:
   SOURCE_PATH: "./src"
 
 jobs:
-  build:
+  rust-build:
     strategy:
       fail-fast: false
       matrix:
@@ -120,3 +120,31 @@ jobs:
           name: CubeShuffle-wasm_${{ matrix.platform }}
           if-no-files-found: error
           path: "${{ github.workspace }}/wasm_build"
+
+  cordova-build:
+    container:
+      image: beevelop/cordova:latest
+    runs-on: ubuntu-latest
+    needs: [rust-build]
+    steps:
+      - name: Install Git
+        run: apt-get -y update && apt-get -y install git
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+          path: ${{ env.SOURCE_PATH }}
+      - name: Download compiled WASM
+        uses: actions/download-artifact@v2
+        with:
+          name: CubeShuffle-wasm_ubuntu-latest
+          path: "${{ env.SOURCE_PATH }}/cube_shuffle-cordova/www"
+      - name: Build Android
+        working-directory: "${{ env.SOURCE_PATH }}/cube_shuffle-cordova"
+        run: |
+          cordova platform add android --no-telemetry --verbose
+          cordova build android --device --release --no-telemetry --verbose
+      - uses: actions/upload-artifact@v2
+        with:
+          name: CubeShuffle-Cordova-Android
+          if-no-files-found: error
+          path: "${{ env.SOURCE_PATH }}/cube_shuffle-cordova/platforms/android/app/build/outputs/bundle/release/app-release.aab"
