--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -126,29 +126,66 @@ jobs:
       fail-fast: false
       matrix:
         target: [
-            'x86_64-unknown-linux-gnu',
-            'aarch64-unknown-linux-musl',
-            'i686-unknown-linux-gnu',
-            'aarch64-unknown-linux-gnu',
-            'arm-unknown-linux-gnueabi',
-            'arm-unknown-linux-gnueabihf',
-            'armv7-unknown-linux-gnueabihf',
-            'riscv64gc-unknown-linux-gnu',
+            x86_64-unknown-linux-gnu,
+            aarch64-unknown-linux-musl,
+            i686-unknown-linux-gnu,
+            aarch64-unknown-linux-gnu,
+            arm-unknown-linux-gnueabi,
+            arm-unknown-linux-gnueabihf,
+            armv7-unknown-linux-gnueabihf,
+            riscv64gc-unknown-linux-gnu,
+            x86_64-unknown-linux-musl,
 
-            'x86_64-pc-windows-msvc',
-            'x86_64-pc-windows-gnu',
-            'i686-pc-windows-msvc',
-            'i686-pc-windows-gnu',
-            'aarch64-pc-windows-msvc',
+            x86_64-pc-windows-msvc,
+            x86_64-pc-windows-gnu,
+            i686-pc-windows-msvc,
+            i686-pc-windows-gnu,
+            aarch64-pc-windows-msvc,
 
-            'x86_64-apple-darwin',
-            'aarch64-apple-darwin',
+            x86_64-apple-darwin,
+            aarch64-apple-darwin,
 
-            'x86_64-unknown-freebsd',
-            'x86_64-unknown-linux-musl',
-            'x86_64-unknown-netbsd',
+            x86_64-unknown-netbsd,
         ]
-    runs-on: ubuntu-latest
+        include:
+          - x86_64-unknown-linux-gnu
+            os: ubuntu-latest
+          - aarch64-unknown-linux-musl
+            os: ubuntu-latest
+          - i686-unknown-linux-gnu
+            os: ubuntu-latest
+          - aarch64-unknown-linux-gnu
+            os: ubuntu-latest
+          - arm-unknown-linux-gnueabi
+            os: ubuntu-latest
+          - arm-unknown-linux-gnueabihf
+            os: ubuntu-latest
+          - armv7-unknown-linux-gnueabihf
+            os: ubuntu-latest
+          - riscv64gc-unknown-linux-gnu
+            os: ubuntu-latest
+          - x86_64-unknown-linux-musl
+            os: ubuntu-latest
+
+          - x86_64-pc-windows-msvc
+            os: windows-2022
+          - x86_64-pc-windows-gnu
+            os: windows-2022
+          - i686-pc-windows-msvc
+            os: windows-2022
+          - i686-pc-windows-gnu
+            os: windows-2022
+          - aarch64-pc-windows-msvc
+            os: windows-2022
+
+          - x86_64-apple-darwin
+            os: macos-latest
+          - aarch64-apple-darwin
+            os: macos-latest
+
+          - x86_64-unknown-netbsd
+            os: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -160,6 +197,7 @@ jobs:
           override: true
       - uses: Swatinem/rust-cache@v1
       - uses: actions-rs/cargo@v1
+        name: Compile
         with:
           use-cross: true
           command: build
