--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: "Rust build & test"
 
 on:
   push:
-    branches: [ '**' ]
+    branches: [ 'master', 'develop' ]
   pull_request:
     branches: [ 'master', 'develop' ]
 
@@ -213,6 +213,11 @@ jobs:
           use-cross: ${{ matrix.cross }}
           command: build
           args: --release --locked --bin cube_shuffle-cli --target ${{ matrix.target }} --target-dir "${{ github.workspace }}/cli_build"
+      - uses: actions/upload-artifact@v2
+        with:
+          name: CubeShuffle-cli_${{ matrix.target }}
+          if-no-files-found: error
+          path: "${{ github.workspace }}/cli_build"
 
   cordova-build:
     container:
