--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -176,13 +176,13 @@ jobs:
 
           - target: x86_64-pc-windows-msvc
             os: windows-2022
-            cross: true
+            cross: false
           - target: i686-pc-windows-msvc
             os: windows-2022
-            cross: true
+            cross: false
           - target: aarch64-pc-windows-msvc
             os: windows-2022
-            cross: true
+            cross: false
 
           - target: x86_64-apple-darwin
             os: macos-latest
@@ -214,10 +214,19 @@ jobs:
           command: build
           args: --release --locked --bin cube_shuffle-cli --target ${{ matrix.target }} --target-dir "${{ github.workspace }}/cli_build"
       - uses: actions/upload-artifact@v2
+        name: Upload binary
+        if: runner.os != 'Windows'
         with:
           name: CubeShuffle-cli_${{ matrix.target }}
           if-no-files-found: error
-          path: "${{ github.workspace }}/cli_build"
+          path: "${{ github.workspace }}/cli_build/${{ matrix.target }}/release/cube_shuffle-cli"
+      - uses: actions/upload-artifact@v2
+        name: Upload Windows binary
+        if: runner.os == 'Windows'
+        with:
+          name: CubeShuffle-cli_${{ matrix.target }}
+          if-no-files-found: error
+          path: "${{ github.workspace }}\\cli_build"
 
   cordova-build:
     container:
