--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,12 +10,12 @@ edition = "2021"
 build = "src/build.rs"
 
 [build-dependencies]
-tauri-build = { version = "1.0.0-beta.4" }
+tauri-build = { version = "1.0.0-rc.1" }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.0.0-beta.8", features = [] }
+tauri = { version = "1.0.0-rc.1", features = [] }
 
 [features]
 default = [ "custom-protocol" ]
