--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           toolchain: stable
           target: wasm32-unknown-unknown
-          components: clippy
+          components: rustfmt, clippy
           override: true
       - uses: Swatinem/rust-cache@v1
         with:
@@ -119,6 +119,9 @@ jobs:
           path: "${{ github.workspace }}/wasm_build"
       - name: Run tests
         run: cargo test --verbose --locked --release --no-fail-fast
+        working-directory: ${{ env.SOURCE_PATH }}
+      - name: Format check
+        run: cargo fmt --all --check
         working-directory: ${{ env.SOURCE_PATH }}
 
   cli-build:
