--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,10 @@ on:
     branches: [ 'master', 'develop' ]
   pull_request:
     branches: [ 'master', 'develop' ]
+  create:
+    tags:
+      - v**
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
@@ -216,26 +220,32 @@ jobs:
           use-cross: ${{ matrix.cross }}
           command: build
           args: --release --locked --bin cube_shuffle-cli --target ${{ matrix.target }} --target-dir "${{ github.workspace }}/cli_build"
+      - name: Rename
+        if: runner.os != 'Windows'
+        run: mv "${{ github.workspace }}/cli_build/${{ matrix.target }}/release/cube_shuffle-cli" "cube_shuffle-cli_${{ matrix.target }}"
       - uses: actions/upload-artifact@v2
         name: Upload binary
         if: runner.os != 'Windows'
         with:
           name: CubeShuffle-cli_${{ matrix.target }}
           if-no-files-found: error
-          path: "${{ github.workspace }}/cli_build/${{ matrix.target }}/release/cube_shuffle-cli"
+          path: "cube_shuffle-cli_${{ matrix.target }}"
+      - name: Rename Windows
+        if: runner.os == 'Windows'
+        run: mv "${{ github.workspace }}/cli_build/${{ matrix.target }}/release/cube_shuffle-cli.exe" "cube_shuffle-cli_${{ matrix.target }}.exe"
       - uses: actions/upload-artifact@v2
         name: Upload Windows binary
         if: runner.os == 'Windows'
         with:
           name: CubeShuffle-cli_${{ matrix.target }}
           if-no-files-found: error
-          path: "${{ github.workspace }}\\cli_build\\${{ matrix.target }}\\release\\cube_shuffle-cli.exe"
+          path: "cube_shuffle-cli_${{ matrix.target }}.exe"
 
   cordova-build:
     container:
       image: beevelop/cordova:latest
     runs-on: ubuntu-latest
-    needs: [rust-build]
+    needs: [ rust-build ]
     steps:
       - name: Install Git
         run: apt-get -y update && apt-get -y install git
@@ -253,8 +263,33 @@ jobs:
         run: |
           cordova platform add android --no-telemetry --verbose
           cordova build android --device --release --no-telemetry --verbose
+      - name: Extract build output
+        run: mv "${{ env.SOURCE_PATH }}/cube_shuffle-cordova/platforms/android/app/build/outputs/bundle/release/app-release.aab" "./CubeShuffle.aab"
       - uses: actions/upload-artifact@v2
         with:
           name: CubeShuffle-Cordova-Android
           if-no-files-found: error
-          path: "${{ env.SOURCE_PATH }}/cube_shuffle-cordova/platforms/android/app/build/outputs/bundle/release/app-release.aab"
+          path: "./CubeShuffle.aab"
+
+  publish:
+    needs: [ cordova-build, cli-build, rust-build ]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - uses: actions/download-artifact@v2
+      - name: List artifacts
+        run: ls -R
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          generate_release_notes: true
+          draft: true
+          fail_on_unmatched_files: true
+          prerelease: true
+          files: |
+            CubeShuffle-Cordova-Android/CubeShuffle.aab
+            CubeShuffle-Tauri_Linux_X64.AppImage/cube-shuffle_*.AppImage
+            CubeShuffle-Tauri_Linux_X64.deb/cube-shuffle_*.deb
+            CubeShuffle-Tauri_Windows_X64.msi/CubeShuffle_*.msi
+            CubeShuffle-Tauri_macOS_X64.dmg/CubeShuffle_*.dmg
+            CubeShuffle-cli_*/*
